--- a/cart-OOP.html
+++ b/cart-OOP.html
@@ -7,6 +7,7 @@
   <body>
     <header>
       <button class="cart-button" type="button">Корзина</button>
+      <div class="basket"></div>
     </header>
     <main>
       <div class="goods-list"></div>
