--- a/cart-OOP.html
+++ b/cart-OOP.html
@@ -6,8 +6,14 @@
   </head>
   <body>
     <header>
-      <button class="cart-button" type="button">Корзина</button>
-      <div class="basket"></div>
+      <form action="#" class="filter">
+        <input type="text" class="goods-search" />
+        <button class="search-button" type="submit">Искать</button>
+      </form>
+      <div class="cart">
+        <button class="cart-button" type="button">Корзина</button>
+        <div class="basket"></div>
+      </div>
     </header>
     <main>
       <div class="goods-list"></div>
